--- a/style.css
+++ b/style.css
@@ -17,7 +17,25 @@
 :root {
 	--maya: hsl(189.8, 81%, 37.1%);
 	--cerulean: hsl(189.5, 90.9%, 25.9%);
-	--seahorse: hsl(48.9, 98.4%, 49.4%);
+	/* --seahorse: hsl(48.9, 98.4%, 49.4%); */
+	
+	/* theres a css-tricks about this i need to find again */
+	--seahorse--base: 48.9, 98.4%;
+	--seahorse--lighten: 49.4%;
+	--seahorse: hsl(var(--seahorse--base), var(--seahorse--lighten));
+	/* this can now be done inline */
+	--seahorse-darken: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) - 20%));
+
+	--footer--color-link: var(--cerulean);
+	--button-box-shadow-color: var(--global--color-light-gray);
+}
+
+.is-dark-theme.is-dark-theme {
+	--button-box-shadow-color: var(--global--color-black);
+}
+
+::select {
+	background: var(--seahorse);
 }
 
 /*------------------------------------*\
@@ -30,6 +48,10 @@
 	/* padding: 0 !important; /* set this inline */
 	display: grid;
 	grid-template-columns: 1fr;
+}
+
+.cmsf-hero::select {
+		background: var(--maya);
 }
 
 @media (min-width: 52rem) {
@@ -230,7 +252,7 @@ well thats ridiculous
 
 
 /*------------------------------------*\
-  #Header can I just CSS this?
+  #Header this needs a little work in the php as well but as light as possible
 \*------------------------------------*/
 
 .site-header {
@@ -250,11 +272,27 @@ well thats ridiculous
 	grid-column: 1;
 }
 
+.site-header > img {
+	object-fit: cover;
+	width: 100%;
+	max-height: 12rem; /* guess and check */
+	z-index: 1;
+	align-self: start;
+}
+
 .site-header svg {
 	z-index: 2; /* show the curved background */
 	align-self: end;
 	margin-block-end: -1rem;
-	fill: white;
+	fill: var(--global--color-background);
+}
+
+.site-header svg #hide {
+	stroke: var(--global--color-background);
+}
+
+.home .site-header svg #hide {
+	stroke: var(--cerulean);
 }
 
 .home .site-header svg {
@@ -273,7 +311,7 @@ well thats ridiculous
 	mix-blend-mode: multiply;
 	z-index: 2;
 	height: 100%;
-	border-bottom: 1rem solid white;
+	border-bottom: 1rem solid white; /* variable this */
 }
 
 .home .site-header .header-grid--overlay {
@@ -286,6 +324,10 @@ well thats ridiculous
 	width: 100%;
 	display: block;
 	z-index: 3;
+}
+
+.site-header .site-title {
+	color: var(--global--color-white); /* this could be a problem based on image */
 }
 
 .site-header .hero {
@@ -328,7 +370,35 @@ well thats ridiculous
 	grid-column: 2;
 	justify-self: end;
 	align-self: end;
-	background-color: var(--seahorse) !important;
+	background-color: var(--cerulean) !important;
+	border-radius: 0.5rem;
+	/* offset-x | offset-y | blur-radius | color */
+	box-shadow: 0.15rem 0.15rem 0.15rem var(--button-box-shadow-color);
+	/* I want a light gray on light and a black on dark */
+	box-shadow: var(--global--elevation);
+}
+
+.site-header button:hover {
+	box-shadow: 0.15rem 0.15rem 0.15rem var(--global--color-gray);
+	border-color: var(--global--color-gray);
+}
+
+/* this works to the site not the theme */
+/* @media (prefers-color-scheme: dark) {
+	.site-header button {
+		box-shadow: 0.15rem 0.15rem 0.15rem var(--global--color-black);
+	}
+} */
+
+.home .site-header button {
+	background-color: var(--seahorse) !important; /* needed */
+	box-shadow: var(--global--elevation);
+}
+
+.home .site-header button:hover {
+	background-color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) - 5%)) !important; /* needed */
+	border-color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) - 10%));
+	color: revert; /* not sure if this is working or just breaking the right way */
 }
 
 .site-branding:last-child {
@@ -355,4 +425,88 @@ well thats ridiculous
 
 .home .site-main {
 	padding-top: 0;
+}
+
+/*------------------------------------*\
+  #Footer
+\*------------------------------------*/
+
+.site-footer {
+	max-width: 100vw !important;
+	padding-bottom: 0;
+}
+
+.site-footer > svg {
+	fill: lightgray;
+	width: 100%;
+	max-height: 2rem; /* guess and check might need to be responsive */
+	display: block; /* get rid of space under */
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+.site-footer .widget-area {
+	grid-template-columns: 1fr;
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	max-width: 100vw;
+}
+
+#menu-footer-menu {
+	/* max-width: var(--responsive--alignwide-width); */
+	max-width: var(--responsive--aligndefault-width);
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: space-between;
+}
+
+.site-footer .widget-area > * {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.site-footer ul {
+	margin-block-end: 0;
+}
+
+.site-footer nav {
+	background: lightgray; /* needs to be a variable */
+	padding-block: 1rem;
+}
+
+.site-footer > .site-info {
+	border-top: none;
+	padding-top: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+	background: lightgray;
+}
+
+/* .site-footer .site-logo {
+	margin: 0;
+	max-width: 4rem;
+}
+
+.site-footer .site-logo img {
+	max-width: 100%;
+} */
+
+.site-footer > .site-info > .site-name {
+	max-width: var(--responsive--aligndefault-width);
+	margin-left: auto;
+	margin-right: auto;
+	padding-block-end: 2rem;
+	display: flex;
+	align-items: baseline;
+	gap: 1rem;
+}
+
+.site-footer > .copyright >p {
+	max-width: var(--max-page);
+	margin-inline: auto;
+	margin-block: 0;
+	padding-inline: 1rem;
 }
