full width firefox looks ok

--- a/style-editor.css
+++ b/style-editor.css
@@ -1,6 +1,8 @@
+/* 
+the most basic test
 body {
   background-color: peachpuff !important;
-}
+} */
 
 .editor-styles-wrapper .wp-block {
 	margin-inline: auto !important;
