--- a/style.css
+++ b/style.css
@@ -44,7 +44,13 @@
 
 /* Theres a way of having this go left to right I just don't know what it is */
 
-.cmsf-hero {
+@media (min-width: 52rem) {
+	.cmsf-hero {
+		padding-right: 0 !important;
+	}
+}
+
+.cmsf-hero > .wp-block-group__inner-container {
 	/* padding: 0 !important; /* set this inline */
 	display: grid;
 	grid-template-columns: 1fr;
@@ -55,26 +61,26 @@
 }
 
 @media (min-width: 52rem) {
-	.cmsf-hero >  {
+	.cmsf-hero > .wp-block-group__inner-container {
 		grid-template-columns: 1fr 26rem 26rem 1fr;
 	}
 }
 
-.cmsf-hero > * {
+.cmsf-hero > .wp-block-group__inner-container > * {
 	grid-row: 1;
 }
 
-.cmsf-hero > .wp-block-columns {
+.cmsf-hero > .wp-block-group__inner-container > .wp-block-columns {
 	grid-column: 1;
 }
 
 @media (min-width: 52rem) {
-	.cmsf-hero > .wp-block-columns {
+	.cmsf-hero > .wp-block-group__inner-container > .wp-block-columns {
 		grid-column: 2 / 4;
 	}
 }
 
-.cmsf-hero > .wp-block-image {
+.cmsf-hero > .wp-block-group__inner-container > .wp-block-image {
 	display: none;
 	width: 100%;
 	max-width: 100% !important; /* overwrite this might be the width of the image */
@@ -85,15 +91,32 @@
 }
 
 @media (min-width: 52rem) {
-	.cmsf-hero > .wp-block-image {
-		display: grid;
+	.cmsf-hero > .wp-block-group__inner-container > .wp-block-image {
+		display: grid; /* show at larger sizes */
 		grid-column: 3/5;
+	}
+
+	.cmsf-hero > .wp-block-group__inner-container > .wp-block-image > * {
+		grid-row: 1;
+		grid-column: 1;
+	}
+	
+	.cmsf-hero > .wp-block-group__inner-container > .wp-block-image::before {
+		content: ""; /* needed to show up */
+		grid-row: 1; /* doesnt come up under > * */
+		grid-column: 1;
+		z-index: 2; /* above the image */
+		background: linear-gradient(90deg, rgba(6,107,126,1) 0%, rgba(255,255,255,0) 100%);
+		/* this would be nice if it was a variable */
 	}
 }
 
-.cmsf-hero > .wp-block-image > img {
+.cmsf-hero > .wp-block-group__inner-container > .wp-block-image > img {
 	height: 100%;
-	overflow-x: hidden;
+	object-fit: cover;
+	mix-blend-mode: multiply;
+	filter: saturate(0);
+	
 }
 
 /*------------------------------------*\
@@ -101,32 +124,43 @@
 \*------------------------------------*/
 
 .cmsf-zero {
+	padding-top: 0 !important;
+}
+
+@media (min-width: 52rem) {
+	.cmsf-zero {
+		padding-left: 0 !important;
+	}
+}
+
+.cmsf-zero > .wp-block-group__inner-container {
 	padding: 0;
 	display: grid;
 	grid-template-columns: 1fr;
 }
 
 @media (min-width: 52rem) {
-	.cmsf-zero {
+	.cmsf-zero > .wp-block-group__inner-container {
 		grid-template-columns: 1fr 26rem 26rem 1fr;
 	}
 }
 
-.cmsf-zero > * {
+.cmsf-zero > .wp-block-group__inner-container > * {
 	grid-row: 1;
 }
 
-.cmsf-zero > .wp-block-columns {
+.cmsf-zero > .wp-block-group__inner-container > .wp-block-columns {
+	padding-top: var(--global--spacing-vertical);
 	grid-column: 1;
 }
 
 @media (min-width: 52rem) {
-	.cmsf-zero > .wp-block-columns {
+	.cmsf-zero > .wp-block-group__inner-container > .wp-block-columns {
 		grid-column: 2 / 4;
 	}
 }
 
-.cmsf-zero > .wp-block-image {
+.cmsf-zero > .wp-block-group__inner-container > .wp-block-image {
 	display: none;
 	width: 100%;
 	max-width: 100% !important; /* overwrite this might be the width of the image */
@@ -137,15 +171,38 @@
 }
 
 @media (min-width: 52rem) {
-	.cmsf-zero > .wp-block-image {
+	.cmsf-zero > .wp-block-group__inner-container > .wp-block-image {
 		display: grid;
 		grid-column: 1/3;
 	}
+
+	.cmsf-zero > .wp-block-group__inner-container > .wp-block-image > * {
+		grid-row: 1;
+		grid-column: 1;
+	}
+	
+	.cmsf-zero > .wp-block-group__inner-container > .wp-block-image::before {
+		content: ""; /* needed to show up */
+		grid-row: 1; /* doesnt come up under > * */
+		grid-column: 1;
+		z-index: 2; /* above the image */
+		background: linear-gradient(-90deg, rgba(6,107,126,1) 0%, rgba(255,255,255,0) 100%);
+		/* this would be nice if it was a variable */
+	}
 }
 
-.cmsf-zero > .wp-block-image > img {
+.cmsf-zero > .wp-block-group__inner-container > .wp-block-image > img {
+	width: 100%;
 	height: 100%;
-	overflow-x: hidden;
+	object-fit: cover;
+	mix-blend-mode: multiply;
+	filter: saturate(0);
+}
+
+.home .site-footer {
+	margin-top: -8rem;
+	z-index: 2;
+	position: relative;
 }
 
 /*------------------------------------*\
@@ -378,9 +435,14 @@ well thats ridiculous
 	box-shadow: var(--global--elevation);
 }
 
+.site-header button:not(:hover):not(:active):not(.has-text-color) {
+	color: var(--global--color-black) !important;
+}
+
 .site-header button:hover {
 	box-shadow: 0.15rem 0.15rem 0.15rem var(--global--color-gray);
 	border-color: var(--global--color-gray);
+	color: var(--global--color-dark-gray);
 }
 
 /* this works to the site not the theme */
@@ -420,7 +482,13 @@ well thats ridiculous
 }
 
 .home .primary-navigation a:link {
-	color: var(--seahorse);
+	/* color: var(--seahorse); not enough contrast */
+	color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) + 15%));; /* not enough contrast */
+}
+
+.home .primary-navigation a:visited {
+	/* color: var(--global--color-white); */
+	color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) + 35%));
 }
 
 .home .site-main {
@@ -437,7 +505,7 @@ well thats ridiculous
 }
 
 .site-footer > svg {
-	fill: lightgray;
+	fill: var(--global--color-light-gray);
 	width: 100%;
 	max-height: 2rem; /* guess and check might need to be responsive */
 	display: block; /* get rid of space under */
@@ -473,7 +541,8 @@ well thats ridiculous
 }
 
 .site-footer nav {
-	background: lightgray; /* needs to be a variable */
+	background: var(--global--color-light-gray);
+	color: var(--global--color-black);
 	padding-block: 1rem;
 }
 
@@ -482,7 +551,8 @@ well thats ridiculous
 	padding-top: 0;
 	margin-top: 0;
 	margin-bottom: 0;
-	background: lightgray;
+	background: var(--global--color-light-gray);
+	color: var(--global--color-black);
 }
 
 /* .site-footer .site-logo {
