try a live version

--- a/style-editor.css
+++ b/style-editor.css
@@ -10,3 +10,8 @@ body {
   margin-right: auto;
   border: 10px solid rebeccapurple;
 }
+
+.is-style-desatured-multiply img {
+	mix-blend-mode: multiply;
+	filter: saturate(0) !important;
+}
