--- a/style.css
+++ b/style.css
@@ -10,10 +10,6 @@
 	Text Domain:  twentytwentyonechild
 */
 
-/* body {
-	background: rebeccapurple !important;
-} */
-
 :root {
 	--maya: hsl(189.8, 81%, 37.1%);
 	--cerulean: hsl(189.5, 90.9%, 25.9%);
@@ -28,6 +24,8 @@
 
 	--footer--color-link: var(--cerulean);
 	--button-box-shadow-color: var(--global--color-light-gray);
+
+	--breakpoint_sm: 482px;
 }
 
 .is-dark-theme.is-dark-theme {
@@ -38,13 +36,20 @@
 	background: var(--seahorse);
 }
 
+
+/*
+body {
+		background: rebeccapurple !important;
+	}
+} */
+
 /*------------------------------------*\
   #Patterns
 \*------------------------------------*/
 
 /* Theres a way of having this go left to right I just don't know what it is */
 
-@media (min-width: 52rem) {
+@media (min-width: 482px) {
 	.cmsf-hero {
 		padding-right: 0 !important;
 	}
@@ -60,7 +65,7 @@
 		background: var(--maya);
 }
 
-@media (min-width: 52rem) {
+@media (min-width: 482px) {
 	.cmsf-hero > .wp-block-group__inner-container {
 		grid-template-columns: 1fr 26rem 26rem 1fr;
 	}
@@ -74,7 +79,7 @@
 	grid-column: 1;
 }
 
-@media (min-width: 52rem) {
+@media (min-width: 482px) {
 	.cmsf-hero > .wp-block-group__inner-container > .wp-block-columns {
 		grid-column: 2 / 4;
 	}
@@ -90,7 +95,7 @@
 	margin-block-start: 0;
 }
 
-@media (min-width: 52rem) {
+@media (min-width: 482px) {
 	.cmsf-hero > .wp-block-group__inner-container > .wp-block-image {
 		display: grid; /* show at larger sizes */
 		grid-column: 3/5;
@@ -199,25 +204,41 @@
 	filter: saturate(0);
 }
 
-.home .site-footer {
-	margin-top: -8rem;
-	z-index: 2;
-	position: relative;
-}
-
 /*------------------------------------*\
   #flex-columns
 \*------------------------------------*/
+
+.flex-columns {
+	flex-flow: row nowrap;
+}
+
+.flex-columns .wp-block-column:nth-child(2n) {
+	margin-left: 1rem;
+}
+
+.flex-columns .wp-block-column:not(:only-child) {
+	flex-basis: auto !important;
+}
 
 .flex-columns > .wp-block-column {
 	flex-grow: unset;
 	flex-basis: auto;
 }
 
-.flex-columns svg {
+.flex-columns img {
 	display: block;
 	width: 2rem;
 }
+
+/*------------------------------------*\
+  #Desaturated Multiplied
+\*------------------------------------*/
+
+.is-style-desatured-multiply img {
+	mix-blend-mode: multiply;
+	filter: saturate(0) !important;
+}
+
 
 /*------------------------------------*\
   #Width
@@ -314,9 +335,15 @@ well thats ridiculous
 
 .site-header {
 	display: grid;
-	margin-block-end: 1rem;
 	max-width: 100vw;
 	padding-block: 0;
+	z-index: 1;
+	position: relative;
+	margin-block-end: 1rem;
+}
+
+.home .site-header {
+	margin-block-end: 0;
 }
 
 .site-header::before,
@@ -332,16 +359,27 @@ well thats ridiculous
 .site-header > img {
 	object-fit: cover;
 	width: 100%;
-	max-height: 12rem; /* guess and check */
 	z-index: 1;
 	align-self: start;
+	max-height: 15rem; /* guess and check */
+}
+
+@media (min-height: var(--breakpoint_sm)) {
+	.site-header > img {
+		max-height: 12rem; /* guess and check */
+	}
 }
 
 .site-header svg {
 	z-index: 2; /* show the curved background */
 	align-self: end;
-	margin-block-end: -1rem;
 	fill: var(--global--color-background);
+}
+
+@media (min-width: 482px) {
+	.site-header svg {
+		margin-block-end: -1rem;
+	}
 }
 
 .site-header svg #hide {
@@ -368,7 +406,12 @@ well thats ridiculous
 	mix-blend-mode: multiply;
 	z-index: 2;
 	height: 100%;
-	border-bottom: 1rem solid white; /* variable this */
+}
+
+@media (min-width: 482px) {
+	.site-header .header-grid--overlay {
+		border-bottom: 1rem solid white; /* variable this */
+	}
 }
 
 .home .site-header .header-grid--overlay {
@@ -423,8 +466,6 @@ well thats ridiculous
 } */
 
 .site-header button {
-	grid-row: 2;
-	grid-column: 2;
 	justify-self: end;
 	align-self: end;
 	background-color: var(--cerulean) !important;
@@ -433,6 +474,15 @@ well thats ridiculous
 	box-shadow: 0.15rem 0.15rem 0.15rem var(--button-box-shadow-color);
 	/* I want a light gray on light and a black on dark */
 	box-shadow: var(--global--elevation);
+	grid-row: 2;
+	grid-column: 1;
+	padding: calc(var(--button--padding-vertical) - (0.25 * var(--global--spacing-unit))) calc(0.5 * var(--button--padding-horizontal));
+}
+
+@media (min-width: 482px) {
+	.site-header button {
+		grid-column: 2;
+	}
 }
 
 .site-header button:not(:hover):not(:active):not(.has-text-color) {
@@ -452,12 +502,12 @@ well thats ridiculous
 	}
 } */
 
-.home .site-header button {
+.site-header button {
 	background-color: var(--seahorse) !important; /* needed */
 	box-shadow: var(--global--elevation);
 }
 
-.home .site-header button:hover {
+.site-header button:hover {
 	background-color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) - 5%)) !important; /* needed */
 	border-color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) - 10%));
 	color: revert; /* not sure if this is working or just breaking the right way */
@@ -481,18 +531,26 @@ well thats ridiculous
 	color: var(--cerulean);
 }
 
-.home .primary-navigation a:link {
-	/* color: var(--seahorse); not enough contrast */
-	color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) + 15%));; /* not enough contrast */
-}
+@media (min-width: 482px ) {
+	.home .primary-navigation a:link {
+		/* color: var(--seahorse); not enough contrast */
+		color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) + 15%));; /* not enough contrast */
+	}
 
-.home .primary-navigation a:visited {
-	/* color: var(--global--color-white); */
-	color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) + 35%));
+	.home .primary-navigation a:visited {
+		/* color: var(--global--color-white); */
+		color: hsl(var(--seahorse--base), calc(var(--seahorse--lighten) + 35%));
+	}
 }
 
 .home .site-main {
 	padding-top: 0;
+}
+
+.menu-button-container #primary-mobile-menu {
+	z-index: 99;
+	background: var(--seahorse);
+	color: var(--global--color-black);
 }
 
 /*------------------------------------*\
@@ -502,6 +560,18 @@ well thats ridiculous
 .site-footer {
 	max-width: 100vw !important;
 	padding-bottom: 0;
+}
+
+.home .site-footer {
+	margin-top: -5rem; /* guess and check */
+	z-index: 2;
+	position: relative;
+}
+
+@media (min-width: 482px) {
+	.home .site-footer {
+		margin-top: -8rem; /* guess and check */
+	}
 }
 
 .site-footer > svg {
@@ -528,6 +598,7 @@ well thats ridiculous
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
+	flex-flow: row wrap;
 	justify-content: space-between;
 }
 
@@ -574,7 +645,7 @@ well thats ridiculous
 	gap: 1rem;
 }
 
-.site-footer > .copyright >p {
+.site-footer > .copyright > p {
 	max-width: var(--max-page);
 	margin-inline: auto;
 	margin-block: 0;
