--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@
 	--button-box-shadow-color: var(--global--color-light-gray);
 
 	--breakpoint_sm: 482px;
+
+	--primary-nav--color-text: var(--cerulean);
 }
 
-.is-dark-theme.is-dark-theme {
+.is-dark-theme {
 	--button-box-shadow-color: var(--global--color-black);
+	--primary-nav--color-text: var(--seahorse);
+	--footer--color-link-hover: var(----global--color-black);
 }
 
 ::select {
@@ -99,6 +103,7 @@ body {
 	.cmsf-hero > .wp-block-group__inner-container > .wp-block-image {
 		display: grid; /* show at larger sizes */
 		grid-column: 3/5;
+		height: min-content;
 	}
 
 	.cmsf-hero > .wp-block-group__inner-container > .wp-block-image > * {
@@ -118,6 +123,7 @@ body {
 
 .cmsf-hero > .wp-block-group__inner-container > .wp-block-image > img {
 	height: 100%;
+	height: min-content; /* safari 14 */
 	object-fit: cover;
 	mix-blend-mode: multiply;
 	filter: saturate(0);
@@ -179,6 +185,7 @@ body {
 	.cmsf-zero > .wp-block-group__inner-container > .wp-block-image {
 		display: grid;
 		grid-column: 1/3;
+		height: min-content;
 	}
 
 	.cmsf-zero > .wp-block-group__inner-container > .wp-block-image > * {
@@ -198,7 +205,7 @@ body {
 
 .cmsf-zero > .wp-block-group__inner-container > .wp-block-image > img {
 	width: 100%;
-	height: 100%;
+	height: min-content;
 	object-fit: cover;
 	mix-blend-mode: multiply;
 	filter: saturate(0);
@@ -528,7 +535,7 @@ well thats ridiculous
 }
 
 .primary-navigation a:link {
-	color: var(--cerulean);
+	color: var(--primary-nav--color-text);
 }
 
 @media (min-width: 482px ) {
@@ -650,4 +657,13 @@ well thats ridiculous
 	margin-inline: auto;
 	margin-block: 0;
 	padding-inline: 1rem;
+}
+
+
+.home .entry-footer {
+	display: none;
+}
+
+.widget-area a:hover {
+	color: var(--footer--color-link-hover);
 }
