--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ body {
 .site-header > img {
 	object-fit: cover;
 	width: 100%;
-	max-width: var(--responsive--aligndefault-width);
+	max-width: 1440px; /* dont do the regular variable it has margins */
 	margin-left: auto;
 	margin-right: auto;
 	z-index: 1;
