--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ well thats ridiculous
 
 
 :root {
-	--maya: hsl(189.8, 81%, 37.1%);
+	--maya: rgb(18, 146, 171);
 	--cerulean: hsl(189.5, 90.9%, 25.9%);
 	--cerulean-b: 189.5, 90.9%;
 	--cerulean-l: 25.9%;
