--- a/style.css
+++ b/style.css
@@ -459,23 +459,25 @@
 }
 
 .site-header .site-logo {
-	height: 100%;
 	max-height: 10rem; /* safari needs something */
 	width: 100%;
 	display: block;
 	z-index: 3;
+	margin-top: 0;
 }
 
 .site-header .site-title {
 	color: var(--global--color-white); /* this could be a problem based on image */
 	margin:	calc(var(--global--spacing-vertical) / 2) calc(var(--global--spacing-horizontal) / 2);
-	margin-top: 0;
+	margin: 0;
+	max-width: 12.5rem;
 }
 
 .site-header .hero {
 	z-index: 4;
 	width: 100%;
 	max-width: var(--responsive--aligndefault-width);
+
 	margin-left: auto;
 	margin-right: auto;
 	display: grid;
@@ -486,22 +488,24 @@
 .site-header	.hero > .site-branding {
 	grid-row: 1;
 	grid-column: 1;
-	align-self: center;
+	/* align-self: center; */
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 22rem; /* guess and check */
-	align-items: end;
+	max-width: 20rem; /* guess and check */
+	align-items: center;
 	margin-top: 1rem;
 	margin-bottom: 2rem;
 	background: #00000066; /* this isnt 66 its a hex code */
 	border-radius: var(--button--border-radius);
+	justify-content: space-around;
+	padding: 0.5rem;
 }
 
 @media (min-width: 482px) {
 	.site-header	.hero > .site-branding {
 		flex-direction: row;
 		flex-wrap: nowrap;
-		gap: 1rem;
+		gap: 0.5rem;
 	}
 }
 
@@ -518,6 +522,10 @@
 
 .site-header .custom-logo {
 	max-width: 3rem;
+}
+
+.site-header .custom-logo-link {
+	display: block;
 }
 
 @media (min-width: 482px) {
